TestSuite/PascalABCTests/errors/err0235.pas
type t1<T> = class end;

begin
  var a := t1&<byte>(t1&<byte>);
end.